--- a/style.scss
+++ b/style.scss
@@ -98,6 +98,20 @@ ul ul, ol ul {
   list-style-type: circle;
 }
 
+table{
+    border-collapse: collapse;
+    border-spacing: 0;
+    border:2px solid #ff0000;
+}
+
+th{
+    border:2px solid #000000;
+}
+
+td{
+    border:1px solid #000000;
+}
+
 em, i {
   font-style: italic;
 }
