--- a/style.scss
+++ b/style.scss
@@ -228,6 +228,7 @@ nav {
   float: right;
   margin-top: 23px; // @TODO: Vertically middle align
   font-family: $helveticaNeue;
+  font-size: 18px;
   @include mobile {
     float: none;
     margin-top: 9px;
